fixed lp text overflow and mistake container screen adjustment

--- a/rfs-fitness/src/styles/LandingPage.css
+++ b/rfs-fitness/src/styles/LandingPage.css
@@ -42,7 +42,7 @@
 .lp-right {
   position: absolute;
   inset: 0;
-  z-index: 1;
+  /* z-index: 1; */
   overflow: hidden;
 }
 .lp-right img {
@@ -67,7 +67,7 @@
 
 .rfs-heading {
   font-family: 'Anton', sans-serif;
-  font-size: clamp(6.8rem, 5.5vw, 5rem);
+  font-size: clamp(6rem, 5.5vw, 6.8rem);
   line-height: 1.05;
   margin: 0 0 1rem 0;
   text-transform: uppercase;
