--- a/rfs-fitness/src/styles/LearnMore.css
+++ b/rfs-fitness/src/styles/LearnMore.css
@@ -9,7 +9,7 @@
     font-weight: bolder;
     text-decoration: none;
     color: white;
-    font-size: 12px;
+    font-size: 15px;
     position: relative;
     overflow: hidden;
     transition: transform 0.3s ease, box-shadow 0.3s ease;
